reduzindo ainda mais a apresentação

--- a/inst/pres/20230331/index.html
+++ b/inst/pres/20230331/index.html
@@ -453,12 +453,11 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 
 <img data-src="assets/img/captcha.gif" class="r-stretch quarto-figure-center"></section>
 
-<section id="uso-indevido-em-serviços-públicos" class="slide level2">
-<h2>Uso indevido em serviços públicos</h2>
+<section id="captchas-impedem-transparência-ativa" class="slide level2">
+<h2>Captchas impedem transparência ativa</h2>
 <ul>
-<li>A Constituição Federal e Lei de Acesso à Informação (LAI) garantem acesso a informações públicas</li>
-<li>Problema da LAI: esforço e formato dos dados: transparência passiva.</li>
-<li><strong>Solução</strong>: disponibilizar dados de forma aberta: transparência ativa</li>
+<li>Transparência passiva: pedidos de Lei de Acesso à Informação (LAI)</li>
+<li>Transparência ativa: dados abertos</li>
 </ul>
 <p><br></p>
 <div class="fragment fade-in">
@@ -466,15 +465,15 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 <h3 id="judiciário-e-dados-abertos">Judiciário e dados abertos</h3>
 <ul>
 <li>Os dados são públicos, mas não são abertos</li>
-<li>Boa parte dos tribunais possuem Captchas</li>
+<li>Muitos sites de tribunais possuem Captchas</li>
 <li>Dificulta a atividade fim da <a href="https://abj.org.br">Associação Brasileira de Jurimetria (ABJ)</a></li>
 <li>Tribunais dificilmente respondem a pedidos de LAI</li>
 <li>Raspagem de dados é a <strong>única alternativa</strong></li>
 </ul>
 </div>
 </section>
-<section id="queremos-resolver-captchas" class="slide level2" data-auto-animate="true">
-<h2 data-id="quarto-animate-title">Queremos resolver Captchas?</h2>
+<section id="section" class="slide level2" data-auto-animate="true">
+<h2 data-id="quarto-animate-title"></h2>
 <p><br></p>
 <h3 id="o-mercado-de-captcha-explora-pessoas">O mercado de Captcha explora pessoas</h3>
 <ul>
@@ -483,8 +482,8 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 </ul>
 
 <img data-src="assets/img/2captcha.gif" style="width:60.0%" class="r-stretch quarto-figure-center"><p class="caption"><a href="https://www.f5.com/labs/articles/cisotociso/i-was-a-human-captcha-solver">Fonte: F5</a></p></section>
-<section id="queremos-resolver-captchas-1" class="slide level2" data-auto-animate="true">
-<h2 data-id="quarto-animate-title">Queremos resolver Captchas?</h2>
+<section id="section-1" class="slide level2" data-auto-animate="true">
+<h2 data-id="quarto-animate-title"></h2>
 <p><br></p>
 <h3 id="o-mercado-de-captcha-explora-pessoas-1">O mercado de Captcha explora pessoas</h3>
 <ul>
@@ -528,13 +527,13 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
       }</style></aside>
 <div class="cell">
 <div class="cell-output-display">
-<div id="htmlwidget-2c04bc6181068bee35af" class="timevis html-widget " style="width:100%;height:500px;">
+<div id="htmlwidget-56a510245c437f8c9792" class="timevis html-widget " style="width:100%;height:500px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-2c04bc6181068bee35af">{"x":{"items":[{"id":"1","content":"Criação<br/>do site","start":"2000-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"2","content":"Tech. report","start":"2002-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"3","content":"Paper original","start":"2003-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"4","content":"Primeiro resolvedor","start":"2003-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"5","content":"Aplicação de<br/>redes neurais","start":"2004-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"6","content":"reCaptcha V1","start":"2008-01-01","style":"font-size: .7em;background-color:lightgreen"},{"id":"7","content":"reCaptcha comprada<br/>pela Google","start":"2009-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"8","content":"resolvendo reCaptcha V1<br/>com 99,8% de acurácia","start":"2013-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"9","content":"reCaptcha V2","start":"2014-01-01","style":"font-size: .7em;background-color:lightgreen"},{"id":"10","content":"resolvendo<br/>reCaptcha V2","start":"2017-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"11","content":"reCaptcha V3<br/>(fim da necessidade<br/>de usar Captchas)","start":"2018-01-01","style":"font-size: .7em;background-color:lightgreen"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":500,"timezone":null,"api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-56a510245c437f8c9792">{"x":{"items":[{"id":"1","content":"Criação<br/>do site","start":"2000-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"2","content":"Tech. report","start":"2002-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"3","content":"Paper original","start":"2003-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"4","content":"Primeiro resolvedor","start":"2003-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"5","content":"Aplicação de<br/>redes neurais","start":"2004-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"6","content":"reCaptcha V1","start":"2008-01-01","style":"font-size: .7em;background-color:lightgreen"},{"id":"7","content":"reCaptcha comprada<br/>pela Google","start":"2009-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"8","content":"resolvendo reCaptcha V1<br/>com 99,8% de acurácia","start":"2013-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"9","content":"reCaptcha V2","start":"2014-01-01","style":"font-size: .7em;background-color:lightgreen"},{"id":"10","content":"resolvendo<br/>reCaptcha V2","start":"2017-01-01","style":"font-size: .7em;background-color:lightblue"},{"id":"11","content":"reCaptcha V3<br/>(fim da necessidade<br/>de usar Captchas)","start":"2018-01-01","style":"font-size: .7em;background-color:lightgreen"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":500,"timezone":null,"api":[]},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 </section>
@@ -596,8 +595,8 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 </div>
 </div>
 </section>
-<section id="a-oportunidade" class="slide level2">
-<h2>A oportunidade</h2>
+<section id="oráculo-a-oportunidade" class="slide level2">
+<h2>Oráculo: a oportunidade</h2>
 <ul>
 <li>Quando preenchemos um Captcha no site, ele nos diz se acertamos ou não</li>
 <li>Mas a informação é limitada: o site só diz de <strong>acertamos</strong> ou <strong>erramos</strong>.</li>
@@ -617,17 +616,18 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 
 <img data-src="assets/img/esquema-oraculo.png" class="r-stretch quarto-figure-center"><ul>
 <li>Conceito de oráculo: resposta do site sobre acerto/erro</li>
-<li>Oráculos existem em todos os sites com Captchas, por construção</li>
-<li>Podem fornecer mais ou menos informação, dependendo da <strong>quantidade de chutes</strong> permitida para um mesmo Captcha</li>
+<li>Oráculos existem em <strong>todos</strong> os sites com Captchas</li>
+<li>Podem permitir <strong>vários chutes</strong> para um mesmo Captcha</li>
 </ul>
 </section>
 <section id="nossa-solução" class="slide level2 center center-x" data-background-image="./assets/img/walle.webp" data-background-opacity="0.2">
 <h2>Nossa solução</h2>
 <div style="margin-top: 200px; font-size: 1.4em">
+<p><strong>Web Automatic Weak Learning (WAWL)</strong></p>
 <ul>
-<li><p>Técnica proposta: Web Automatic Weak Learning (WAWL)</p></li>
+<li><p>Parte de um modelo inicial</p></li>
 <li><p>Obtém novos dados automaticamente</p></li>
-<li><p>Combina <strong>raspagem de dados</strong> e <strong>aprendizado fracamente supervisionado</strong></p></li>
+<li><p>Atualiza o modelo</p></li>
 </ul>
 </div>
 </section>
@@ -635,8 +635,7 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 <h2>Como funciona?</h2>
 
 <img data-src="assets/img/wawl.png" class="r-stretch quarto-figure-center"><ul>
-<li>Modelo inicial: pode ser ajustado com uma base completamente anotada</li>
-<li>Também pode ser um super-modelo generalista</li>
+<li><strong>Modelo inicial</strong>: pode ser ajustado com uma pequena base completamente anotada ou pode ser um super-modelo generalista.</li>
 </ul>
 </section>
 <section id="vantagens-do-wawl" class="slide level2">
@@ -657,7 +656,9 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 <p><span class="math display">\[\mathcal L(g(\mathbf x), {\mathbf y}) = -\log\left[1 - \sum_{y \in \mathcal A} {g_y}(\mathbf x) I(y\notin {\mathbf y})\right]\]</span></p>
 <ul>
 <li>Quando a informação é <strong>parcial</strong>, a <strong>perda é maior</strong> quando o modelo dá alta probabilidade para um <strong>rótulo incorreto</strong>.</li>
-<li>Quando a informação é <strong>completa</strong>, utilizamos a função de <strong>perda original</strong>.</li>
+<li>Quando a informação é <strong>completa</strong>, utilizamos a função de <strong>perda original</strong>.<br>
+</li>
+<li>Como ler a função: “Não dê altas probabilidades para rótulos que sabemos que estão errados!”</li>
 </ul>
 </section>
 
@@ -737,35 +738,10 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 </tr>
 </tbody>
 </table>
+<p>Também consideramos Captchas artificiais, criados diretamente no R.</p>
 </section>
-<section id="captchas-artificiais" class="slide level2">
-<h2>Captchas artificiais</h2>
-<ul>
-<li>Facilita testes e simulações</li>
-<li>Evita necessidade de acesso à internet e construção de bases de dados específicas</li>
-</ul>
-<div>
-<div class="cell">
-<div class="cell-output-display">
-<div id="fig-captcha-r-exemplo" class="quarto-figure quarto-figure-center">
-<figure>
-<p><img data-src="index_files/figure-revealjs/fig-captcha-r-exemplo-1.png" style="width:50.0%"></p>
-<p></p><figcaption>Figura&nbsp;2: Exemplo de captcha gerado pela função <code>captcha::captcha_generate()</code></figcaption><p></p>
-</figure>
-</div>
-</div>
-</div>
-</div>
-</section>
-<section id="para-baixar-os-dados" class="slide level2" data-auto-animate="true">
-<h2 data-id="quarto-animate-title">Para baixar os dados</h2>
-<h3 id="raspagem-de-dados">Raspagem de dados</h3>
 
-<img data-src="assets/img/cycle.png" style="width:80.0%" class="r-stretch quarto-figure-center"><p class="caption">Figura&nbsp;3: Ciclo da raspagem de dados. Fonte: <a href="https://curso-r.github.io/main-web-scraping">curso de Web Scraping da Curso-R</a>.</p><ul>
-<li>Cada Captcha ganhou uma função <code>captcha_access()</code> e outra <code>captcha_test()</code>.</li>
-<li>Códigos disponíveis no pacote <a href="https://github.com/jtrecenti/captchaDownload"><code>{captchaDownload}</code></a>.</li>
-</ul>
-</section>
+
 <section id="para-baixar-os-dados-1" class="slide level2" data-auto-animate="true">
 <h2 data-id="quarto-animate-title">Para baixar os dados</h2>
 <h3 id="raspagem-de-dados-1">Raspagem de dados</h3>
@@ -800,8 +776,8 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 <p><br></p>
 <h3 id="experimentos-adicionais">Experimentos adicionais</h3>
 <ul>
-<li>Aplicação iterada do WAWL para verificar melhorias</li>
-<li>Aprendizado online: incorporação do download de dados dentro da construção do <em>minibatch</em></li>
+<li>Aplicação <strong>iterada</strong> do WAWL para verificar melhorias</li>
+<li><strong>Aprendizado online</strong>: download de dados dentro do <em>minibatch</em></li>
 </ul>
 </div>
 </section></section>
@@ -883,7 +859,7 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 <li>Aumento de acurácia sem anotação manual</li>
 </ul>
 </div><div class="column" style="width:30%;">
-<h4 id="resultados-empíricos">Resultados Empíricos</h4>
+<h4 id="resultados-empíricos">Resultados empíricos</h4>
 <ul>
 <li>Acurácia do modelo aumentada em 3x</li>
 <li>Possibilidade de aplicação iterada para maior poder preditivo</li>
@@ -912,7 +888,7 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 <h4 id="sociedade-em-geral">Sociedade em geral</h4>
 <ul>
 <li>Quebra de incentivo nefasto</li>
-<li>Impacto positivo nas relações de trabalho</li>
+<li>Possibilitar novas pesquisas</li>
 </ul>
 </div>
 </div>
@@ -922,8 +898,7 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 <h3 id="aprimoramentos">Aprimoramentos</h3>
 <ul>
 <li>Resultados matemáticos mais robustos</li>
-<li>Estudo mais completo da aplicação iterada</li>
-<li>Estudo mais completo do aprendizado online</li>
+<li>Aprofundamento dos estudos de aplicação iterada e aprendizado online</li>
 </ul>
 <h3 id="extensões">Extensões</h3>
 <ul>
@@ -938,7 +913,7 @@ Orientador: Victor Fossaluza <a href="https://orcid.org/0000-0002-9328-0210" cla
 <p><img data-src="assets/img/walle.gif"></p>
 </div>
 </section>
-<section id="referências-usadas-na-apresentação" class="slide level2 smaller scrollable">
+<section id="referências-usadas-na-apresentação" class="slide level2 smaller scrollable" data-visibility="uncounted">
 <h2>Referências usadas na apresentação</h2>
 <div id="refs" class="references csl-bib-body hanging-indent" role="doc-bibliography">
 <div id="ref-fengProvablyConsistentPartiallabel2020" class="csl-entry" role="doc-biblioentry">
